--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
 </style>
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Testing prototype</title>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600&display=swap" rel="stylesheet">
 	<link href="icons.js" rel="stylesheet">
