--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 		width: auto;
 		max-height: 40px;
 		background-color: white;
-		overflow-x:hidden;
+		overflow-x: auto;
 	}
 
 	#mid-scroll .content {
