--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
 		width: 100%;
 		text-align: left;
 		padding-left: 20px;
+		padding-right:40px;
 		align-items: center;
 		flex-grow:1;
 		justify-content: space-between;
-
 		height: 100%;
 
 	}
