Attempt 1 to fix padding issues on progress

--- a/menu-progress.html
+++ b/menu-progress.html
@@ -1,9 +1,9 @@
-<ul>
-	<li style="margin-left:20px"><a href="#" action="checkins">CHECK-INS</a></li>
-	<li><a href="#" action="goals">GOALS</a></li>
-	<li><a href="#" action="strategy">STRATEGY</a></li>
-	<li><a href="#" action="skills">SKILLS</a></li>
-	<li><a href="#" action="learning">LEARNING</a></li>
+<ul style="justify-content: flex-start">
+	<li style="padding:0 0px 0 20px"><a href="#" action="checkins">CHECK-INS</a></li>
+	<li style="padding:0 0px 0 20px"><a href="#" action="goals">GOALS</a></li>
+	<li style="padding:0 0px 0 20px"><a href="#" action="strategy">STRATEGY</a></li>
+	<li style="padding:0 0px 0 20px"><a href="#" action="skills">SKILLS</a></li>
+	<li style="padding:0 20px 0 20px"><a href="#" action="learning">LEARNING</a></li>
 </ul>
 
 <script>
