--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
 
 	#mid-scroll .content {
 		display: flex;
-		width: 100%;
+		width: auto;
 		text-align: left;
-		padding-left: 20px;
-		padding-right:40px;
+/*		padding-left: 20px;
+		padding-right: 20px;*/
 		align-items: center;
 		flex-grow:1;
 		justify-content: space-between;
@@ -135,7 +135,8 @@
 	}
 
 	#mid-scroll .content .button-menu {
-		width: 100%;
+		width: auto;
+		min-width: 100%;
 		margin-right: 20px;
 		font-size: 13px;
 		height: 100%;
